# tag-media

./: Cargo.toml  diesel.toml
src/: lib.rs
src/data/: base_path.rs  media_file.rs  mod.rs  tag.rs  tag_category.rs
src/database/: connection.rs  mod.rs  schema.rs
src/media/: base_paths.rs  media.rs  mod.rs
src/tags/: category.rs  mod.rs  tags.rs
